--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -23,7 +23,7 @@ jobs:
       run: chmod +x gradlew
       
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build --no-parallel -x lint
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
